src/objects/APTS_Hierarchy_Pricing_Properties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting is to decide whether hierarchy pricing is On/Off</description>
    <fields>
        <fullName>APTS_Hierarchy_Pricing_ON__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hierarchy Pricing ON?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Json_Body_Variable1__c</fullName>
        <label>Json Body Variable1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Json_Body_Variable2__c</fullName>
        <label>Json Body Variable2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Hierarchy Pricing Properties</label>
</CustomObject>